--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ mark { background-color:#ff9; color:#000; font-style:italic; font-weight:bold; }
 del { text-decoration: line-through; }
 abbr[title], dfn[title] { border-bottom:1px dotted; cursor:help; }
 table { border-collapse:collapse; border-spacing:0; }
-hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; }
+hr { display:block; height:1px; border:0; border-top:1px solid #bbb; margin:1em 0; padding:0; }
+hr.profile { display:block; height:1px; border:0; border-top:2px solid #fff; margin:1em 0; padding:0; }
 input, select { vertical-align:middle; }
 
 /*
