--- a/style.css
+++ b/style.css
@@ -171,11 +171,19 @@ a {
 	color: #336699;
 }
 
+a.footer_link {
+    color: #fff;
+}
+
 a:link
 {
 	font-family: Arial, Helvetica, Sans-Serif;
 	text-decoration: none;
   	color: #336699;
+}
+
+a.footer_link:link {
+    color: #fff;
 }
 
 a:visited, a.visited
@@ -185,11 +193,19 @@ a:visited, a.visited
   	color: #336699;
 }
 
+a.footer_link:visited {
+    color: #fff;
+}
+
 a:hover, a.hover
 {
 	font-family: Arial, Helvetica, Sans-Serif;
 	text-decoration: none;
  	color: #0080FF;
+}
+
+a.footer_link:hover {
+    color: #fff;
 }
 
 a.anchor 
