--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body
 	margin: 0 auto;
 	padding: 0;
 	background-color: #1C2121;
-	background-image: url('images/Page-BgTexture2.jpg');
+	background-image: url('images/Page-BgTexture.jpg');
 	background-repeat: repeat;
 	background-attachment: fixed;
 	background-position: top left;
