--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ div.backtotop	{ display: none; } /* Disabled. */
 .cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size:1px; }
 
 /* Footer */
-.footer	{ margin-top:60px; position:relative; text-align:center; border-top: solid 2px #333; background-color: #4682B4; width:100%; }
+.footer	{ margin-top:60px; position:relative; text-align:center; border-top: solid 2px #2A4E6C; background-color: #4682B4; width:100%; }
 
 /* Tables */
 table		{ margin-top: 1.6667em; border-collapse:collapse; }
@@ -204,8 +204,8 @@ p.tiny_text									{ font-family: Georgia, "Times New Roman", Times, serif;
 	
 	/* Containers */
 	.container_main		{ width: 90%; }
-	.header			{ width: 100%; position: static; padding-top: 1em; padding-bottom: 0; background-image:none;		
-				  background-color: #4682B4; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }
+	.header			{ width: 100%; position: static; padding-top: 1em; padding-bottom: 0; background-image:none; 
+				  border-bottom: solid 1px #fff;}
 	.header .headlogo	{ position:relative; max-width:100%; height:120px; float: left; text-align:center; margin:0 auto; margin-top:5px;
 				  border-top: solid 3px #333; border-bottom: solid 3px #333; background-image: url('images/head.png'); }
 	.logo_container		{ position: relative; width: 100%; height: 200px; z-index: 1; margin-left: auto; margin-right: auto; }
@@ -214,7 +214,7 @@ p.tiny_text									{ font-family: Georgia, "Times New Roman", Times, serif;
 	.logo_image_third	{ display: block; position: relative; z-index: 1; height: 200px; width: 200px;
 				  background-image: url('images/me_sf_bw.png'); float: left; text-align:center; margin:0 auto; margin-left: 10px; }
 	.logo_image_fourth	{ display: block; position: relative; float:left; z-index: 1; height:200px; width:100%; background-color:#4682B4;
-				  margin:0 auto; overflow:hidden; }
+				  border-bottom: solid 2px #2A4E6C; margin:0 auto; overflow:hidden; }
 
 	/* Menus */
 	.header .nav	{ width: 100%; float: none; margin-top: 0; padding-top: 0; }
