--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1.profile { margin-top: 0; margin-bottom: 0; letter-spacing:0px; font-size: 28p
 h2 { font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
 h2.profile { margin-bottom: 0; margin-top: 0; font-weight: normal; letter-spacing:0px; font-size: 22px; color: #fff; }
 h2.headerlogo { margin-bottom: 0; margin-top: 0; width: 40%; font-size: 1.6em; float: left; }
-h3 { font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
+h3 { font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; text-align: left; }
 h3.profile { margin-bottom: 0; margin-top: 0; font-weight: normal; letter-spacing:0px; font-size: 18px; color: #fff; }
 h4 { font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; padding-top: 5px; padding-bottom: 5px;
 	border-bottom: solid 2px #4682B4; }
