--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body, button, input, select, textarea	{ font-family: sans-serif; color: #333; }
 h1, h2, h3 { letter-spacing: -0.04em; }
 h1 { font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
 h1.headerlogo { width: 30%; margin-top: 0; margin-bottom: 0; float: left; letter-spacing:0px; font-family: Arial, Helvetica, sans-serif; 
-	font-size: 20px; color: #fff; }
+	font-size: 18px; color: #fff; }
 h1.profile { margin-top: 0; margin-bottom: 0; letter-spacing:0px; font-size: 28px; color: #fff; }
 h2 { font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
 h2.profile { margin-bottom: 0; margin-top: 0; font-weight: normal; letter-spacing:0px; font-size: 22px; color: #fff; }
@@ -58,8 +58,7 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .nav a:visited	{ text-decoration: none; color: #fff; }
 .nav a:hover { text-decoration: none; color: #fff; background-color: #ff4500; }
 .nav ul	{ margin: 0; padding:0; list-style: none; float: right; }
-.nav li	{ float: left; border-left: dotted 1px #aaa; padding: 0; margin: 0; line-height: 1.8em; font-family: Arial, Helvetica, sans-serif; 
-	font-size: 20px; }
+.nav li	{ float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: Arial, Helvetica, sans-serif; font-size: 18px; }
 .nav li.first { float: left; border-left: none; }
 div.backtotop { display: none; }
 .section { position:relative; margin-top: 6em; z-index: 1; }
@@ -129,9 +128,9 @@ h3.profile { padding-left: 10px; }
 .container_main { width: 90%; }
 .header	{  position: static; padding-top: 1em; padding-bottom: 0; background-image:none; border-bottom: solid 1px #fff; }
 .logo_container	{ width: 100%; }
-.section_header { position:relative; margin-top: 0; padding-top:0; z-index: 1; background-image:none; }
+.section_header { margin-top: 0; padding-top:0; background-image:none; }
 .logo_image { display:none; }
-.logo_image_second { position: relative; float:left; z-index: 1; height:auto; width: 100%; background-color:#4682B4; padding:0; }
+.logo_image_second { height:auto; width: 100%; padding:0; }
 .logo_image_third { display: block; position: relative; margin-top: 50px; z-index: 1; height: 150px; width: 150px; background-image: url('images/me_sf_bw_small.jpg'); 
 	float: left; text-align:center; margin-left: 10px; box-shadow: 10px 0px 60px 0px rgba(0,0,0,0.6); border-top-left-radius:10px; border-top-right-radius:10px;
 	-webkit-border-top-right-radius: 10px; -webkit-border-top-left-radius: 10px; }
@@ -152,7 +151,7 @@ div.backtotop a span { display: none; }
 .col_c	{ width:90%; }
 .col_l	{ width:90%; }
 .col_r	{ width:90%; }
-dl { text-align: left; padding-top: 1em; padding-bottom: 0.87em; float: none; border: solid 1px #bbb; border-bottom: none; margin: 0; height: auto;}
+dl { text-align: left; padding-bottom: 0.87em; float: none; border: solid 1px #bbb; border-bottom: none; margin: 0; height: auto;}
 dl.small_text { margin-top: 0em; line-height: 1.2em;}
 dl#email { margin-top: 1em; }
 dl#address { border-bottom: solid 1px #bbb; }
