--- a/style.css
+++ b/style.css
@@ -20,50 +20,45 @@ input, select { vertical-align:middle; }
 /* PCs */
 html { overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; 
 	-ms-text-size-adjust: 100%; }
-body { font-size: 100%; margin: 0 auto; padding: 0; background-image: url('images/Page-BgTexture.jpg'); background-repeat: repeat; 
+body { font-size: 100%; margin: 0 auto; padding: 0;  background-image: url('images/Page-BgTexture.jpg'); background-repeat: repeat; 
 	background-attachment: fixed; background-position: top left; }
 body, button, input, select, textarea	{ font-family: sans-serif; color: #333; }
 h1, h2, h3 { letter-spacing: -0.04em; }
-h1 { font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
-h1.headerlogo { width: 30%; margin-top: 0; margin-bottom: 0; float: left; letter-spacing:0px; font-family: Arial, Helvetica, sans-serif; 
-	font-size: 18px; color: #fff; }
-h1.profile { margin-top: 0; margin-bottom: 0; letter-spacing:0px; font-size: 28px; color: #fff; }
-h2 { font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
-h2.profile { margin-bottom: 0; margin-top: 0; font-weight: normal; letter-spacing:0px; font-size: 22px; color: #fff; }
-h2.headerlogo { margin-bottom: 0; margin-top: 0; width: 40%; font-size: 1.6em; float: left; }
-h3 { font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
-h3.profile { margin-bottom: 0; margin-top: 0; font-weight: normal; letter-spacing:0px; font-size: 18px; color: #fff; }
-h4 { font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; padding-top: 5px; padding-bottom: 5px;
+h1.headertext { letter-spacing:0px; font-size: 30px; color: #fff; }
+h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; color: deepskyblue; padding: 0; margin: 0; }
+h1 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
+h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
+h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
+h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; padding-top: 5px; padding-bottom: 5px;
 	border-bottom: solid 2px #4682B4; }
-a { font-family: Arial, Helvetica, Sans-Serif; text-decoration: none; color: #336699; }
+a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
 a.footer_link { color: #fff; }
-a:link { font-family: Arial, Helvetica, Sans-Serif; text-decoration: none; color: #336699; }
+a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
 a.footer_link:link { color: #fff; }
-a:visited, a.visited { font-family: Arial, Helvetica, Sans-Serif; text-decoration: none; color: #336699; }
+a:visited, a.visited { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
 a.footer_link:visited { color: #fff; }
-a:hover, a.hover { font-family: Arial, Helvetica, Sans-Serif; text-decoration: none; color: #0080FF; }
+a:hover, a.hover { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #0080FF; }
 a.footer_link:hover { text-decoration: underline; color: #fff; }
 a.anchor { display: block; position: relative; top: -250px; visibility: hidden; }
-.container_main	{ width: 960px; margin: 0 auto; }
-.header	{ width: 100%; position: fixed; top: 0; left: 0; background-color: #4682B4; opacity:0.96;
-	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; overflow:hidden; z-index: 10; border-bottom: solid 2px #2A4E6C; }
-.logo_container	{ position: relative; width: 960px; height: 200px; z-index: 1; margin-left: auto; margin-right: auto; }
-.logo_image { position: relative; z-index: 1; height: 200px; width: 200px; background-image: url('images/me_sf_bw.jpg'); float: left;
-	margin:0 auto; box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.2); }
-.logo_image_second { position: relative; float:left; z-index: 1; height: 180px; width: 740px; background-color:#4682B4; padding:10px; }
-.logo_image_third { display:none; }
-.logo_image_fourth { display:none; }
-.nav { width: 70%; float: left; }
-.nav a	{ text-decoration: none; color: #fff; padding: 0 12px 0 12px; display: inline-block; }
-.nav a:visited	{ text-decoration: none; color: #fff; }
-.nav a:hover { text-decoration: none; color: #fff; background-color: #ff4500; }
-.nav ul	{ margin: 0; padding:0; list-style: none; float: right; }
-.nav li	{ float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: Arial, Helvetica, sans-serif; font-size: 18px; }
-.nav li.first { float: left; border-left: none; }
+.container_main	{ position: relative; z-index: -1; width: 960px; margin: 0 auto; }
+.header { position:relative;  z-index: 1; background-color: #333;
+	margin-left: auto; margin-right: auto; border-top: solid 3px #111; border-bottom: solid 3px #111; }
+.profile_container { margin: 0 auto; margin-bottom: 20px; padding:0; list-style: none; width: 972px; height: 140px; }	
+.profile_image { display: block; position: relative; margin-top: 30px; z-index: 1; height: 100px; width: 100px; 
+	background-image: url('images/me_sf_bw_small.jpg'); text-align:center; box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); 
+	border-radius:30px; -webkit-border-radius: 30px;  float: left; }
+.profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
+.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #555;  
+	border-bottom: solid 3px #111;  overflow:hidden; z-index: 10; }     
+.nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #555; }
+.nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
+.nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
+.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: deepskyblue; }
+.nav ul,.nav-fixed ul{ margin: 0 auto; padding:0; list-style: none; width: 972px; }
+.nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: 
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
 .section { position:relative; margin-top: 6em; z-index: 1; }
-.section_header { position:relative; padding-top: 16em; z-index: 1; background-size: cover; background-image: url('images/cover.jpg');
-	margin-left: auto; margin-right: auto; }
 .section_first { position:relative; margin-top: 2em; z-index: 1; }	
 .row { margin-right: -20px; margin-left: -20px; }
 .row:before, .row:after { display: table; content: " "; }
@@ -75,7 +70,7 @@ div.backtotop { display: none; }
 .col_l { position: relative; min-height: 1px; padding-left: 20px; padding-right: 0px; float: left; width:47%; text-align: justify; }
 .col_r { position: relative; min-height: 1px; padding-left: 20px; float: left; width:47%; text-align: justify; }
 .cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size:1px; }
-.footer	{ width:100%; margin-top:60px; position:relative; text-align:center; border-top: solid 2px #2A4E6C; background-color: #4682B4;}
+.footer	{ width:100%; margin-top:60px; position:relative; text-align:center; border-top: solid 3px #111; background-color: #333;}
 dl { font-size: 1em; line-height: 2em; float: left; border: solid 1px #bbb; border-right: none; margin: 1em 0 0 0; height: 10em; 
 	padding-top: 1em; text-align: center; background-color: #fff; }
 dl#email { width: 31.4%; }
@@ -89,7 +84,7 @@ ul, ol, li { margin-left: 20px; }
 p, ul, ol, dl, pre, code { font-size: 1.4em; line-height: 1.4286em; margin-top: 1.4286em; margin-bottom: 0em; }
 p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: Georgia, "Times New Roman", Times, serif; font-size: 2.2em; 
 	line-height: 1.3636em; margin-top: 0.9091em; margin-bottom: 0em; }
-p.large_text img, ul.large_text img, ol.large_text img, dl.large_text img { margin-top: 9.9091em;}
+p.large_text img, ul.large_text img, ol.large_text img, dl.large_text img { margin-top: 9.9091em; }
 ul.large_text li, ol.large_text li { margin-top: 0.3846em; }
 p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: Georgia, "Times New Roman", Times, serif; font-size: 1.4em; 
 	line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; }
@@ -103,46 +98,29 @@ p.tiny_text { font-family: Georgia, "Times New Roman", Times, serif; margin-top:
 
 /* TABLETS */
 @media only screen and (min-width: 768px) and (max-width: 974px) {
-h1.headerlogo { width: 22%; }
-h2.headerlogo { width: 150px; }
-h2.profile { font-size: 20px; }
-h3.profile { line-height: 24px; font-size: 16px; }	
-header { width: 720px; }
-.container_main	{ width: 720px; position: relative; }
-.logo_container	{ min-width: 768px; }
-.logo_image_second { width: 536px; }
-.logo_image_third { display:none; }
-.logo_image_fourth { display:none; }			
-.nav { width:78%; }
+.profile_container { width: 720px;}	
+.nav ul	{ width: 720px; }
 .nav a { padding: 0 6px 0 6px; }
+.container_main	{ width: 720px; position: relative; }
 }
 
 /* MOBILE */
 @media only screen and (max-width: 767px) {
 html body { background-image: none; background-color: rgb(248,248,248); max-width: 100%; overflow-x: hidden; }
-h1.headerlogo { display:none; }
-h2.headerlogo { width: 100%; font-size: 1.6em; }
-h1.profile { padding-left: 10px; }
-h2.profile { padding-left: 10px; }
-h3.profile { padding-left: 10px; }	
-.container_main { width: 90%; }
-.header	{  position: static; padding-top: 1em; padding-bottom: 0; background-image:none; border-bottom: solid 1px #fff; }
-.logo_container	{ width: 100%; }
-.section_header { margin-top: 0; padding-top:0; background-image:none; }
-.logo_image { display:none; }
-.logo_image_second { height:auto; width: 100%; padding:0; }
-.logo_image_third { display: block; position: relative; margin-top: 50px; z-index: 1; height: 150px; width: 150px; background-image: url('images/me_sf_bw_small.jpg'); 
-	float: left; text-align:center; margin-left: 10px; box-shadow: 10px 0px 60px 0px rgba(0,0,0,0.6); border-top-left-radius:10px; border-top-right-radius:10px;
-	-webkit-border-top-right-radius: 10px; -webkit-border-top-left-radius: 10px; }
-.logo_image_fourth { display: block; position: relative; float:left; z-index: 1; height:200px; width:100%; background-size: cover; background-image: url('images/cover.jpg');
-	border-bottom: solid 2px #2A4E6C; margin:0 auto; overflow:hidden; }
-.nav { position: relative; min-height: 40px; width: 100%; }	
-.nav ul { width: 80px; min-height: 40px; padding: 8px 0; background: #4682B4 url(images/menu.png) no-repeat; float: left; margin-left: 10px; }
-.nav li { display: none; margin: 0; }
-.nav .first { display: none; }
-.nav a { display: block; padding: 0px 5px 0px 5px; text-align: left; }
-.nav ul:hover { background-image: none; padding-top:40px;}
+h1.headertext { font-size: 28px; text-align: center; }
+h1.subheadertext { font-size: 18px; text-align: center;}
+.profile_container { width: 100%; height: auto; margin-left: auto; margin-right: auto; }	
+.profile_image { margin-left: auto; margin-right: auto; margin-top: 10px; float: none; }
+.profile_text { height: auto; margin: 0; padding-top: 0; text-align: center; float: none;}
+.nav-fixed { display: none; }
+.nav { padding-top: 15px; height: auto; width: 100%; margin: 0 auto;  text-align: center;  }	
+.nav ul { width: 40px; min-height: 40px; height: auto; padding: 8px 0; background: #555 url(images/menu.png) no-repeat; float: none; 
+	margin: 0 auto; overflow: hidden; }
+.nav li { display: none; margin: 0; text-align: center; float: none; }
+.nav a { display: block;  text-align: center; }
+.nav ul:hover { background-image: none; padding-top:40px; width: 100%; }
 .nav ul:hover li { display: block; margin: 0 0 2px; border-left: none; }
+.container_main { width: 90%; z-index: 1; }
 a.anchor { display: block; position: relative; top: -40px; visibility: hidden; }
 div.backtotop { display: block; float: right; }
 div.backtotop a	{ border: none; display: block; width: 30px; height: 30px; margin-top: 2.2em; background: url(images/arrow_top.png) no-repeat right 0; }
