--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #555; }
 .nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
-.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: deepskyblue; }
+.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: #336699; }
 .nav ul,.nav-fixed ul{ margin: 0 auto; padding:0; list-style: none; width: 972px; }
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: 
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
