--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; col
 h1 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
 h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
 h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
-h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; padding-top: 5px; padding-bottom: 5px;
-	border-bottom: solid 2px #4682B4; }
+h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; 
+	padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #4682B4; }
 a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
 a.footer_link { color: #fff; }
 a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
@@ -49,7 +49,7 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 	border-radius:30px; -webkit-border-radius: 30px;  float: left; }
 .profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
 .nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #555;  
-	border-bottom: solid 3px #111;  overflow:hidden; z-index: 10; }     
+	border-bottom: solid 3px #111;  overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }     
 .nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #555; }
 .nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
@@ -129,12 +129,12 @@ div.backtotop a span { display: none; }
 .col_c	{ width:90%; }
 .col_l	{ width:90%; }
 .col_r	{ width:90%; }
-dl { text-align: left; padding-bottom: 0.87em; float: none; border: solid 1px #bbb; border-bottom: none; margin: 0; height: auto;}
+dl { text-align: left; padding-bottom: 0.87em; float: none; border: solid 1px #bbb; border-bottom: none; margin: 0; height: auto; }
 dl.small_text { margin-top: 0em; line-height: 1.2em;}
 dl#email { margin-top: 1em; }
 dl#address { border-bottom: solid 1px #bbb; }
 dl#email, dl#phone, dl#address { width: 95.5%; padding-left: 3%; }
-dt { float: left; width: 22%; padding-right: 3%; font-size: 1.0em;}
+dt { float: left; width: 22%; padding-right: 3%; font-size: 1.0em; }
 dd { margin-left: 30%; }
 dl#email dd, dl#phone dd, dl#address dd { margin-top: 0; }	
 }
