--- a/style.css
+++ b/style.css
@@ -54,9 +54,8 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
 .nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: #336699; }
-.nav ul,.nav-fixed ul{ margin: 0 auto; padding:0; list-style: none; width: 972px; }
-.nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: 
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
+.nav ul,.nav-fixed ul { margin: 0 auto; padding:0; list-style: none; width: 972px; }
+.nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
 .section { position:relative; margin-top: 6em; z-index: 1; }
 .section_first { position:relative; margin-top: 2em; z-index: 1; }	
