--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decor
 a.footer_link:link { color: #fff; }
 a:visited, a.visited { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
 a.footer_link:visited { color: #fff; }
-a:hover, a.hover { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #0080FF; }
+a:hover, a.hover { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; border-bottom: 3px deepskyblue solid; }
 a.footer_link:hover { text-decoration: underline; color: #fff; }
 a.anchor { display: block; position: relative; top: -250px; visibility: hidden; }
 .container_main	{ position: relative; z-index: 0; width: 960px; margin: 0 auto; }
@@ -53,7 +53,7 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #555; }
 .nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
-.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: #336699; }
+.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: #336699; border: none; }
 .nav ul,.nav-fixed ul { margin: 0 auto; padding:0; list-style: none; width: 972px; }
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
