Changed menu icon

--- a/style.css
+++ b/style.css
@@ -50,11 +50,12 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 	border-radius:30px; -webkit-border-radius: 30px;  float: left; }
 .profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
 .nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #495867;  
-	overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }     
+	overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }
 .nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #495867; }
 .nav a,.nav-fixed a { text-decoration: none; color: #fcfdff; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fcfdff; }
 .nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #292f36; background-color: #61dafb; border: none; }
+.menuicon { }
 .nav ul,.nav-fixed ul { margin: 0 auto; padding:0; list-style: none; width: 972px; }
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
@@ -99,6 +100,7 @@ p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margi
 /* TABLETS */
 @media only screen and (min-width: 768px) and (max-width: 974px) {
 .profile_container { width: 720px;}	
+.menuicon { }
 .nav ul	{ width: 720px; }
 .nav a { padding: 0 6px 0 6px; }
 .container_main	{ width: 720px; position: relative; }
@@ -114,11 +116,14 @@ h1.subheadertext { font-size: 18px; text-align: center;}
 .profile_text { height: auto; margin: 0; padding-top: 0; text-align: center; float: none;}
 .nav-fixed { display: none; }
 .nav { padding-top: 15px; height: auto; width: 100%; margin: 0 auto;  text-align: center;  }	
-.nav ul { width: 40px; min-height: 40px; height: auto; padding: 8px 0; background: #495867 url(images/menu.png) no-repeat; float: none; 
+
+.menuicon { margin: 0 auto; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; content:""; height: 5px; width:30px; }
+.nav ul { width: 40px; min-height: 40px; height: auto; padding: 8px 0; float: none; 
 	margin: 0 auto; overflow: hidden; }
 .nav li { display: none; margin: 0; text-align: center; float: none; }
 .nav a { display: block;  text-align: center; }
-.nav ul:hover { background: #495867 url(images/menu-hover.png) no-repeat; padding-top:60px; width: 100%; background-position: top center; }
+.nav ul:hover { width: 100%; background-position: top center; }
+.nav ul:hover .menuicon { margin: 0 auto; border-bottom: 17px double #61dafb; border-top: 6px solid #61dafb; content:""; height: 5px; width:30px; margin-bottom: 20px; }
 .nav ul:hover li { display: block; margin: 0 0 2px; border-left: none; }
 .container_main { width: 90%; z-index: 1; }
 a.anchor { display: block; position: relative; top: -40px; visibility: hidden; }
