--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ hr { display:block; height:2px; border:0; border-top:1px solid #fcfdff; margin:1
 input, select { vertical-align:middle; }
 
 /* PCs */
-html { overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; 
-	-ms-text-size-adjust: 100%; }
+html { overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 body { font-size: 100%; margin: 0 auto; padding: 0;  background-color: #fcfdff; }
 body, button, input, select, textarea	{ font-family: sans-serif; color: #292f36; }
 h1, h2, h3 { letter-spacing: -0.04em; }
@@ -29,8 +28,8 @@ h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; col
 h1 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
 h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
 h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
-h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; 
-	padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #3e78b2; }
+h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em;
+     padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #3e78b2; }
 a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #3e78b2; }
 a.footer_link { color: #fcfdff; }
 a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #3e78b2; }
@@ -44,13 +43,12 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .container_even { background-color: #eff0f2; }
 .container_main	{ position: relative; z-index: 0; width: 960px; margin: 0 auto; padding-bottom:60px; padding-top:30px;}
 .header { position:relative;  z-index: 1; background-color: #292f36; border-top: solid 2px #292f36; margin-left: auto; margin-right: auto; }
-.profile_container { margin: 0 auto; margin-bottom: 20px; padding:0; list-style: none; width: 972px; height: 140px; }	
-.profile_image { display: block; position: relative; margin-top: 30px; z-index: 1; height: 100px; width: 100px; 
-	background-image: url('images/profile.png'); text-align:center; box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); 
-	border-radius:30px; -webkit-border-radius: 30px;  float: left; }
+.profile_container { margin: 0 auto; margin-bottom: 20px; padding:0; list-style: none; width: 972px; height: 140px; }
+.profile_image { display: block; position: relative; margin-top: 30px; z-index: 1; height: 100px; width: 100px;  background-image: url('images/profile.png'); text-align:center;
+		 box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); border-radius:30px; -webkit-border-radius: 30px;  float: left; }
 .profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
-.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #495867;  
-	overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }
+.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #495867; overflow:hidden; z-index: 10; opacity:0.96;
+	     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }
 .nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #495867; }
 .nav a,.nav-fixed a { text-decoration: none; color: #fcfdff; padding: 0 12px 0 12px; display: inline-block; }
 .nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fcfdff; }
@@ -60,7 +58,7 @@ a.anchor { display: block; position: relative; top: -250px; visibility: hidden; 
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
 .section { position:relative; z-index: 1; }
-.section_first { position:relative; margin-top: 2em; z-index: 1; }	
+.section_first { position:relative; margin-top: 2em; z-index: 1; }
 .row { margin-right: -20px; margin-left: -20px; }
 .row:before, .row:after { display: table; content: " "; }
 .row:after { clear: both; }
@@ -73,7 +71,7 @@ div.backtotop { display: none; }
 .cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size:1px; }
 .footer	{ width:100%; position:relative; text-align:center; border-top: solid 1px #111; background-color: #292f36;}
 dl { font-size: 1em; line-height: 2em; float: left; border: solid 1px #bbb; border-right: none; margin: 1em 0 0 0; height: 13em; 
-	padding-top: 1em; text-align: center; background-color: #fcfdff; }
+     padding-top: 1em; text-align: center; background-color: #fcfdff; }
 dl#email { width: 31.4%; }
 dl#phone { width: 29.4%; }
 dl#address { width: 38.6%; border-right: solid 1px #bbb; }
@@ -83,12 +81,12 @@ dl#address dd { line-height: 1.2em; margin-top: 0.5em; margin-bottom: 0em; }
 img {  border: 0; -ms-interpolation-mode: bicubic; max-width:100%; height: auto; }
 ul, ol, li { margin-left: 20px; }
 p, ul, ol, dl, pre, code { font-size: 1.4em; line-height: 1.4286em; margin-top: 1.4286em; margin-bottom: 0em; }
-p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.2em; 
-	line-height: 1.3636em; margin-top: 0.9091em; margin-bottom: 0em; }
+p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.2em;
+							    line-height: 1.3636em; margin-top: 0.9091em; margin-bottom: 0em; }
 p.large_text img, ul.large_text img, ol.large_text img, dl.large_text img { margin-top: 9.9091em; }
 ul.large_text li, ol.large_text li { margin-top: 0.3846em; }
-p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.4em; 
-	line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; }
+p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.4em; line-height: 1.1111em;
+								margin-top: 1.1111em; margin-bottom: 0em; }
 p.medium_text img, ul.medium_text img, ol.medium_text img, dl.medium_text img { margin-top: 1.1111em; }
 ul.medium_text li, ol.medium_text li { margin-top: 0.5em; }
 p.small_text, ul.small_text, ol.small_text, dl.small_text { font-size: 1.0em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; }
@@ -99,8 +97,7 @@ p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margi
 
 /* TABLETS */
 @media only screen and (min-width: 768px) and (max-width: 974px) {
-.profile_container { width: 720px;}	
-.nav li.menubutton { display: none; } 
+.profile_container { width: 720px; }
 .nav ul	{ width: 720px; }
 .nav a { padding: 0 6px 0 6px; }
 .container_main	{ width: 720px; position: relative; }
@@ -108,17 +105,16 @@ p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margi
 
 /* MOBILE */
 @media only screen and (max-width: 767px) {
-html body { background-image: none; background-color: rgb(248,248,248); max-width: 100%; overflow-x: hidden; }
+html body { max-width: 100%; overflow-x: hidden; }
 h1.headertext { font-size: 28px; text-align: center; }
-h1.subheadertext { font-size: 18px; text-align: center;}
-.profile_container { width: 100%; height: auto; margin-left: auto; margin-right: auto; }	
+h1.subheadertext { font-size: 18px; text-align: center; }
+.profile_container { width: 100%; height: auto; margin-left: auto; margin-right: auto; }
 .profile_image { margin-left: auto; margin-right: auto; margin-top: 10px; float: none; }
 .profile_text { height: auto; margin: 0; padding-top: 0; text-align: center; float: none;}
 .nav-fixed { display: none; }
 .nav { padding-top: 15px; padding-bottom: 15px; height: auto; width: 100%; margin: 0 auto;  text-align: center; }
 .nav ul { margin: auto; text-align: center; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; content:""; height: 5px; width: 35px; }
 .nav li { display: none; margin: 0; text-align: center; float: none; }
-.nav li.menubutton { display: none; } 
 .nav a { display: block;  text-align: center; }
 .nav ul:hover { height: 100%; width: 100%; background-position: top center; border: none; }
 .nav ul:hover li { display: block; margin: 0 0 2px; border-left: none; }
@@ -137,7 +133,7 @@ dl.small_text { margin-top: 0em; line-height: 1.2em;}
 dl#email { margin-top: 1em; }
 dl#address { border-bottom: solid 1px #bbb; }
 dl#email, dl#phone, dl#address { width: 95.5%; padding-left: 3%; }
-dt { float: left; width: 22%; padding-right: 3%; font-size: 1.0em; margin-bottom: 0;}
+dt { float: left; width: 22%; padding-right: 3%; font-size: 1.0em; margin-bottom: 0; }
 dd { margin-left: 30%; margin-bottom: 0.5em; }
 dl#email dd, dl#phone dd, dl#address dd { margin-top: 0; }	
 }
